syntax = "proto3";

package banner.v1;
import "errors/errors.proto";

option go_package = "github.com/asynccnu/ccnubox-be/be-api/gen/proto/banner/v1;bannerv1";

enum BannerErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;

  GET_BANNER_ERROR = 0 [(errors.code) = 501];
  DEL_BANNER_ERROR = 1 [(errors.code) = 502];
  SAVE_BANNER_ERROR = 2 [(errors.code) = 503];
}
